Kafka producer and consumer
