# microservices/ms-kafka-producer/src/main/java/br/com/eventhorizon/mywallet/ms/kafka/producer/infrastructure/http/mapper/DtoMapper.java
@@ -1,9 +1,7 @@
 package br.com.eventhorizon.mywallet.ms.kafka.producer.infrastructure.http.mapper;
 
-import br.com.eventhorizon.mywallet.ms.kafka.producer.api.http.model.ProducerRequest2DTO;
 import br.com.eventhorizon.mywallet.ms.kafka.producer.api.http.model.ProducerRequestDTO;
 import br.com.eventhorizon.mywallet.ms.kafka.producer.domain.input.BatchParamsInput;
-import br.com.eventhorizon.mywallet.ms.kafka.producer.domain.input.ProduceMessagesInput;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 import org.mapstruct.NullValueCheckStrategy;
@@ -18,13 +16,7 @@ public interface DtoMapper {
 
     @Mapping(target = "batchName", source = "batchName")
     @Mapping(target = "topic", source = "destinationTopic")
-    @Mapping(target = "numberOfMessages", source = "numberOfMessages")
-    @Mapping(target = "messageSize", source = "messageSize")
-    ProduceMessagesInput mapToInput(ProducerRequestDTO dto);
-
-    @Mapping(target = "batchName", source = "batchName")
-    @Mapping(target = "topic", source = "destinationTopic")
     @Mapping(target = "period", source = "period")
     @Mapping(target = "messageSize", source = "messageSize")
-    BatchParamsInput mapToInput(ProducerRequest2DTO dto);
+    BatchParamsInput mapToInput(ProducerRequestDTO dto);
 }
